--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -96,52 +96,10 @@ jobs:
           push: true
           platforms: ${{ matrix.platform }}
           tags: |
+            ${{ needs.set-vars.outputs.REGISTRY }}/${{ needs.set-vars.outputs.IMAGE_NAME }}:latest
             ${{ needs.set-vars.outputs.REGISTRY }}/${{ needs.set-vars.outputs.IMAGE_NAME }}:${{ matrix.suffix }}
             ${{ needs.set-vars.outputs.REGISTRY }}/${{ needs.set-vars.outputs.IMAGE_NAME }}:${{ github.sha }}-${{ matrix.suffix }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
             CMDLINE_TOOLS_URL=${{ needs.set-vars.outputs.CMDLINE_URL }}
-
-  create-manifest:
-    name: Create multi-arch manifest (latest + sha)
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout (for context)
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ needs.set-vars.outputs.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: "Create multi-arch tag: latest"
-        run: |
-          REG="${{ needs.set-vars.outputs.REGISTRY }}"
-          IMG="${{ needs.set-vars.outputs.IMAGE_NAME }}"
-          echo "Creating multi-arch image ${REG}/${IMG}:latest from per-arch images"
-          docker buildx imagetools create --tag "${REG}/${IMG}:latest" \
-            "${REG}/${IMG}:amd64" "${REG}/${IMG}:arm64"
-
-      - name: "Create multi-arch tag: sha"
-        run: |
-          REG="${{ needs.set-vars.outputs.REGISTRY }}"
-          IMG="${{ needs.set-vars.outputs.IMAGE_NAME }}"
-          SHA_TAG="${{ github.sha }}"
-          echo "Creating multi-arch image ${REG}/${IMG}:${SHA_TAG} from per-arch images"
-          docker buildx imagetools create --tag "${REG}/${IMG}:${SHA_TAG}" \
-            "${REG}/${IMG}:${SHA_TAG}-amd64" "${REG}/${IMG}:${SHA_TAG}-arm64"
-
-      - name: Output pushed image names
-        run: |
-          REG="${{ needs.set-vars.outputs.REGISTRY }}"
-          IMG="${{ needs.set-vars.outputs.IMAGE_NAME }}"
-          echo "Multi-arch images pushed:"
-          echo "${REG}/${IMG}:latest"
-          echo "${REG}/${IMG}:${{ github.sha }}"
